style: update description and draft incomplete posts
- Draft Overview of Java
- Github Hosting
- Draft EverythingIndianPro